<resources>
    <string name="login_dialog_title">AndroidPIT Login Data</string>
    <string name="prefs_temperature_default">0</string>
    <string name="prefs_refresh_rate_default">600</string>
    <string name="prefs_history_file_default">/sdcard/battery_history.txt</string>
    <string name="PREFSKEY_ALWAYS_MONITOR">prefKeyAlwaysMonitor</string>
    <string name="PREFSKEY_REFRESH_RATE">prefKeyRefreshRate</string>
    <string name="PREFSKEY_SWITCH_HISTORY">switchHistory</string>
    <string name="PREFSKEY_SAVE_HISTORY">prefKeySaveHistory</string>
    <string name="PREFSKEY_SHOW_HISTORY">prefKeyShowHistory</string>
    <string name="PREFSKEY_SHOW_ESTIMATES">showEstimates</string>
    <string name="PREFSKEY_HISTORY_FILE">prefKeyHistoryFile</string>
    <string name="PREFSKEY_HISTORY_SIZE">historySize</string>
    <string name="PREFSKEY_DUAL_GRAPH">prefKeyDualGraph</string>
    <string name="PREFSKEY_WIDGET_ICON">prefKeyWidgetIcon_</string>
    <string name="PREFSKEY_WIDGET_BG">prefKeyWidgetBg_</string>
    <string name="PREFSKEY_WIDGET_LABEL">widgetLabel_</string>
    <string name="PREFSKEY_WIDGET_LABELBG">widgetLBg_</string>
    <string name="PREFSKEY_TEMPERATURE">prefKeyWidgetTemp</string>
    <string name="PREFSKEY_FULL_ALARM">fullAlarm</string>
    <string name="PREFSKEY_ALARM_VOLT">alarmVolt</string>
    <string name="PREFSKEY_ALARM_HVOLT">alarmHVolt</string>
    <string name="PREFSKEY_ALARM_LVOLT">alarmLVolt</string>
    <string name="PREFSKEY_ALARM_TEMP">alarmTemp</string>
    <string name="PREFSKEY_ALARM_HTEMP">alarmHTemp</string>
    <string name="PREFSKEY_FULL_ZERO">fullZero</string>
    <string name="PREFSKEY_ALARM_NOTIF">alarmNotif</string>
    <string name="PREFSKEY_ALARM_VIBRATE">alarmVibrate</string>
    <string name="PREFSKEY_NOTIF">notifEnable</string>
    <string name="PREFSKEY_SET_PACKAGES">setPkg</string>
    <string name="PREFSKEY_LANGUAGE">language</string>
    <string name="PREFSKEY_WIDGET_FONT_SIZE">widgetFont_</string>
    <string name="PREFSKEY_WIDGET_TEXT_COLOR">widgetText_</string>
    <string name="PREFSKEY_WIDGET_CHARGE_COLOR">widgetCharge_</string>
    <string name="PREFSKEY_WIDGET_DISCHARGE_COLOR">widgetDischarge_</string>
    <string name="PREFSKEY_ESTIMATES_DURATION">EstimateDuration</string>
    <string name="PREFSKEY_ESTIMATE_DISCHARGE_MA">EstimatemA</string>
    <string name="PREFSKEY_MONITOR_AWAKE">Awake</string>
    <string name="PREFSKEY_NOTIFICATION_TEXT">NotifText</string>
    <string name="PREFSKEY_NOTIFICATION_LED">NotifLed</string>
    <string name="PREFSKEY_NOTIFICATION_REPEAT">NotifRepeat</string>
    <string name="PREFSKEY_TEMP_MULTI">tempMulti</string>
    <string name="PREFSKEY_DEFY">defyOne</string>
    <string name="PREFSKEY_PREFER_PH_MA">mADisplay</string>
    <string name="PREFSKEY_MA_OVERRIDE">mAMethod</string>
    <string name="PREFSKEY_RESET_BOOT">resetBoot</string>
    <string name="PREFSKEY_SUPPORT">support</string>
    <string name="PREFSKEY_FULL_CHARGE_RECORDING">fullCharge</string>
    <string name="prefs_title_support">Request mA support</string>
    <string name="prefs_summary_support">Click here if mA value is incorrectly reported</string>
    <string name="prefs_title_notif_type">Notification packages</string>
    <string name="prefs_summary_notif_type">Choose which notification packages to use</string>
    <string name="prefs_title_notification_text">Notification title</string>
    <string name="prefs_summary_notification_text">Defines the title to use in notifications</string>
    <string name="prefs_title_mA_override">mA retrieval method</string>
    <string name="prefs_summary_mA_override">Override auto-discovery</string>
    <string name="prefs_title_temp_multi">Temperature Multiplier</string>
    <string name="prefs_summary_temp_multi">Enter a multiplier to apply to original temperature values</string>
    <string name="prefs_screen_monitoring">Monitoring</string>
    <string name="prefs_screen_display">Display</string>
    <string name="prefs_screen_alarm">Status &amp; Alarm</string>
    <string name="prefs_category_notif">Notifications</string>
    <string name="prefs_category_alarm">Alarms</string>
    <string name="prefs_title_language">Language</string>
    <string name="prefs_summary_language">Override phone language to better suit you</string>
    <string name="prefs_screen_monitoring_summary">Settings for monitoring battery data</string>
    <string name="prefs_screen_display_summary">Settings language, units, etc…</string>
    <string name="prefs_screen_alarm_summary">Settings notification and alarm triggers</string>
    <string name="prefs_estimate_discharge_mA">mA corrections</string>
    <string name="prefs_estimate_discharge_mA_on">Estimates standby mA drain</string>
    <string name="prefs_estimate_discharge_mA_off">Enable ONLY if mA drain is incorrect in standby</string>
    <string name="prefs_monitor_wakup">Uninterrupted history logging</string>
    <string name="prefs_monitor_wakeup_on">Default behavior (recommended)</string>
    <string name="prefs_monitor_wakeup_off">While consuming less CPU, history may be missing data in standby</string>
    <string name="prefs_title_auto_reset_boot">Measure on boot</string>
    <string name="prefs_auto_reset_boot_on">Last measure is updated on boot</string>
    <string name="prefs_auto_reset_boot_off">Last measure is remembered on reboot</string>
    <string name="prefs_title_notif_enable">Show status icon</string>
    <string name="prefs_notif_enable_on">Status icon is visible</string>
    <string name="prefs_notif_enable_off">No status icon</string>
    <string name="prefs_title_defy_one_percent">1% increment support</string>
    <string name="prefs_defy_one_percent_on">Read % value from system file</string>
    <string name="prefs_defy_one_percent_off">Work-around to use only if needed</string>
    <string name="prefs_title_full_alarm">Battery full</string>
    <string name="prefs_summary_full_alarm">Ring-tone to play when battery gets full</string>
    <string name="prefs_title_full_zero">Charging completed</string>
    <string name="prefs_summary_full_zero">Ring-tone to play when charging stops</string>
    <string name="prefs_title_volt_alarm">Voltage out of range</string>
    <string name="prefs_summary_volt_alarm">Ring-tone to play when voltage is out of range</string>
    <string name="prefs_title_temp_alarm">Temperature too high</string>
    <string name="prefs_summary_temp_alarm">Ring-tone to play when temperature is too high</string>
    <string name="prefs_title_hvolt_level">Maximum voltage</string>
    <string name="prefs_summary_hvolt_level">Voltage that triggers the alarm</string>
    <string name="prefs_title_lvolt_level">Minimum voltage</string>
    <string name="prefs_summary_lvolt_level">Voltage that triggers the alarm</string>
    <string name="prefs_title_temp_level">Maximum temperature</string>
    <string name="prefs_summary_temp_level">Temperature that triggers the alarm</string>
    <string name="prefs_title_alarm_notification">Notification on trigger</string>
    <string name="prefs_alarm_notification_on">Triggered alarms are added to notification bar</string>
    <string name="prefs_alarm_notification_off">Triggered alarms only play selected ring-tone</string>
    <string name="prefs_title_alarm_vibrate">Vibrate on trigger</string>
    <string name="prefs_alarm_vibrate_on">The phone vibrates when an alarm is triggered</string>
    <string name="prefs_alarm_vibrate_off">No vibration</string>
    <string name="prefs_title_always_monitor">Monitoring without widget</string>
    <string name="prefs_always_monitor_on">Monitoring (history and graphs) will start at boot time</string>
    <string name="prefs_always_monitor_off">only if application is running or widget added to home screen</string>
    <string name="prefs_title_dual_graph">Dual graphs</string>
    <string name="prefs_dual_graph_on">Two graphs are displayed</string>
    <string name="prefs_dual_graph_off">A single graph is displayed</string>
    <string name="prefs_title_widget_icon">Select battery icon</string>
    <string name="prefs_summary_widget_icon">Change the look of the battery</string>
    <string name="prefs_title_widget_label">Shows label</string>
    <string name="prefs_title_widget_labelbg">Shows label background</string>
    <string name="prefs_widget_labelbg_on">Label has a background</string>
    <string name="prefs_widget_labelbg_off">No background under label</string>
    <string name="prefs_title_widget_bg">Select background</string>
    <string name="prefs_summary_widget_bg">Change the look of the widget</string>
    <string name="prefs_title_temperature">Temperature Unit</string>
    <string name="prefs_summary_temperature">Select temperature unit to record</string>
    <string name="prefs_title_refresh_rate">History update rate</string>
    <string name="prefs_summary_refresh_rate">Interval to update history and graphs</string>
    <string name="prefs_title_estimates_duration">Estimates duration unit</string>
    <string name="prefs_estimates_duration_on">Uses duration</string>
    <string name="prefs_estimates_duration_off">Uses clock time</string>
    <string name="prefs_title_save_history">Save battery history</string>
    <string name="prefs_save_history_on">History is stored in selected file</string>
    <string name="prefs_save_history_off">History is not stored locally</string>
    <string name="prefs_title_history_switch">Switch SD/internal</string>
    <string name="prefs_summary_history_switch">Save history to internal or SD card</string>
    <string name="prefs_title_show_history">History on main screen</string>
    <string name="prefs_show_history_on">History is shown on main screen</string>
    <string name="prefs_show_history_off">History is not displayed on main screen</string>
    <string name="prefs_title_show_estimates">Estimates on main screen</string>
    <string name="prefs_show_estimates_on">Estimates are shown on main screen</string>
    <string name="prefs_show_estimates_off">Estimates are not displayed on main screen</string>
    <string name="prefs_title_history_file">History File</string>
    <string name="prefs_title_history_size">History Size</string>
    <string name="prefs_summary_history_size">Set maximum history file size</string>
    <string name="prefs_title_prefer_mA">Default mA display</string>
    <string name="prefs_prefer_mA_on">Displays mA in history and main screen</string>
    <string name="prefs_prefer_mA_off">Displays %/h in history and main screen</string>
    <string name="prefs_widget_text_color">Default text color</string>
    <string name="prefs_widget_text_color_summary">Select widget default text color</string>
    <string name="prefs_widget_charge_color">Charging text color</string>
    <string name="prefs_widget_charge_color_summary">Select charging text color (mA, mW, %/h)</string>
    <string name="prefs_widget_discharge_color">Discharging text color</string>
    <string name="prefs_widget_discharge_color_summary">Select discharging text color (mA, mW, %/h)</string>
    <string name="prefs_alarm_led_title">Use hardware led</string>
    <string name="prefs_alarm_led_on">Led will blink</string>
    <string name="prefs_alarm_led_off">Led will not turn on</string>
    <string name="prefs_repeat_alarm_title">Repeating ring-tone</string>
    <string name="prefs_repeat_alarm_on">Ringtone will repeat until manually dismissed</string>
    <string name="prefs_repeat_alarm_off">Ringtone will play once</string>
    <string name="prefs_record_full_charge_title">Record fully charged history</string>
    <string name="prefs_record_full_charge_on">History is updated when fully charged</string>
    <string name="prefs_record_full_charge_off">No history update when fully charged and plugged</string>
    <string name="prefs_widget_font_title">Select widget font size</string>
    <string name="prefs_widget_font_summary">Use default launcher or custom size</string>
</resources>