<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/prefs_screen_monitoring" android:summary="@string/prefs_screen_monitoring_summary"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/prefs_title_save_history" android:key="@string/PREFSKEY_SAVE_HISTORY" android:defaultValue="true" android:summaryOn="@string/prefs_save_history_on" android:summaryOff="@string/prefs_save_history_off" />
    <CheckBoxPreference android:title="@string/prefs_monitor_wakup" android:key="@string/PREFSKEY_MONITOR_AWAKE" android:dependency="@string/PREFSKEY_SAVE_HISTORY" android:defaultValue="true" android:summaryOn="@string/prefs_monitor_wakeup_on" android:summaryOff="@string/prefs_monitor_wakeup_off" />
    <CheckBoxPreference android:title="@string/prefs_record_full_charge_title" android:key="@string/PREFSKEY_FULL_CHARGE_RECORDING" android:dependency="@string/PREFSKEY_SAVE_HISTORY" android:defaultValue="true" android:summaryOn="@string/prefs_record_full_charge_on" android:summaryOff="@string/prefs_record_full_charge_off" />
    <EditTextPreference android:title="@string/prefs_title_history_file" android:key="@string/PREFSKEY_HISTORY_FILE" android:summary="@string/prefs_history_file_default" android:dependency="@string/PREFSKEY_SAVE_HISTORY" android:defaultValue="@string/prefs_history_file_default" />
    <ListPreference android:entries="@array/settings_refresh_rates" android:title="@string/prefs_title_refresh_rate" android:key="@string/PREFSKEY_REFRESH_RATE" android:summary="@string/prefs_summary_refresh_rate" android:dependency="@string/PREFSKEY_SAVE_HISTORY" android:defaultValue="@string/prefs_refresh_rate_default" android:entryValues="@array/settings_refresh_rate_values" />
    <ListPreference android:entries="@array/settings_history_size_entries" android:title="@string/prefs_title_history_size" android:key="@string/PREFSKEY_HISTORY_SIZE" android:summary="@string/prefs_summary_history_size" android:dependency="@string/PREFSKEY_SAVE_HISTORY" android:defaultValue="524288" android:entryValues="@array/settings_history_size_values" />
    <Preference android:title="@string/prefs_summary_history_switch" android:key="@string/PREFSKEY_SWITCH_HISTORY" android:summary="@string/prefs_title_history_switch" android:dependency="@string/PREFSKEY_SAVE_HISTORY" />
</PreferenceScreen>
