<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:entries="@array/settings_label_entries" android:title="@string/prefs_title_widget_label" android:key="@string/PREFSKEY_WIDGET_LABEL" android:summary="prefs_widget_label_on" android:defaultValue="1" android:entryValues="@array/settings_label_values" />
    <CheckBoxPreference android:title="@string/prefs_title_widget_labelbg" android:key="@string/PREFSKEY_WIDGET_LABELBG" android:dependency="@string/PREFSKEY_WIDGET_LABEL" android:defaultValue="false" android:summaryOn="@string/prefs_widget_labelbg_on" android:summaryOff="@string/prefs_widget_labelbg_off" />
    <ListPreference android:entries="@array/settings_widget_bg_entries" android:title="@string/prefs_title_widget_bg" android:key="@string/PREFSKEY_WIDGET_BG" android:summary="@string/prefs_summary_widget_bg" android:defaultValue="6" android:dialogIcon="@drawable/widget_bg" android:entryValues="@array/settings_widget_bg_values" />
    <ListPreference android:entries="@array/settings_widget_icon_entries" android:title="@string/prefs_title_widget_icon" android:key="@string/PREFSKEY_WIDGET_ICON" android:summary="@string/prefs_summary_widget_icon" android:defaultValue="4" android:dialogIcon="@drawable/charging1" android:entryValues="@array/settings_widget_icon_values" />
    <ListPreference android:entries="@array/font_size_entries" android:title="@string/prefs_widget_font_title" android:key="@string/PREFSKEY_WIDGET_FONT_SIZE" android:summary="@string/prefs_widget_font_summary" android:defaultValue="0" android:entryValues="@array/font_size_values" />
    <Preference android:title="@string/prefs_widget_text_color" android:key="@string/PREFSKEY_WIDGET_TEXT_COLOR" android:summary="@string/prefs_widget_text_color_summary" />
    <Preference android:title="@string/prefs_widget_charge_color" android:key="@string/PREFSKEY_WIDGET_CHARGE_COLOR" android:summary="@string/prefs_widget_charge_color_summary" />
    <Preference android:title="@string/prefs_widget_discharge_color" android:key="@string/PREFSKEY_WIDGET_DISCHARGE_COLOR" android:summary="@string/prefs_widget_discharge_color_summary" />
</PreferenceScreen>
